--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 
 <p>The transformation of Websites to APIs refers to the steps needed to leverage the Web content to self-defined data structures that can be consumed by machines and Web agents, called semantic annotations. Cornerstone requirement for this to happen is the incorporation of the correct vocabulary terms in a website. The presented approach addresses this challenge by helping to identify the most appropriate set of Linked Open Vocabulary terms for a given Web content context by leveraging the existing dynamics within the LOV graph and the LOD cloud.</p>
 
+{% for post in site.posts %}
+    <article>
+      <h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
+      <p>
+        {{ post.excerpt }}
+      </p>
+
+      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
+    </article>
+  {% endfor %}
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/istavrak">istavrak</a></p>
